# widget-webserver

./: Cargo.toml  README.md  build.rs  example.build.rs
src/: main.rs
src/bitcoin/: functions.rs
src/stocks/: functions.rs
src/system/: functions.rs
src/twitch/: functions.rs
src/weather/: functions.rs
